--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
   <nav class="w-full max-w-[600px] mx-auto pt-4 pb-8">
   <div class="w-full px-4 flex justify-center items-center">
     <a href="/%20/">
-      <img src="/images/valyafm-logo.png" alt="logo" class="h-12">
+      
+      <img src="http://localhost:1313/images/valyafm-logo.png" alt="logo" class="h-12">
     </a>
   </div>
 </nav>
